fix mobile alignment bug in about section

--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -83,6 +83,7 @@
     & #about-content-div {
       display: flex;
       flex-direction: column;
+      align-items: center;
 
       & #headshot-div {
         display: flex;
