--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -535,6 +535,9 @@ footer .social-media-icon {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #about-section #about-content-div #headshot-div {
     display: -webkit-box;
